[css] Fix image width on mobile

--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -19,6 +19,7 @@ html {
 img {
   padding: 0.5rem;
   border: 0.125rem solid $clr_lightborder;
+  max-width: 100%;
 }
 
 body {
